# faust-math

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
faust/: ai_service.py  auth.py  cli.py  config.py  database.py  math_renderer.py  session_manager.py
